testProject/local/logs/project.log
2019-05-10T00:34:51.059Z - normal: Load ~/.CocosCreator/settings.json
2019-05-10T00:34:51.062Z - normal: checking language setting...
2019-05-10T00:34:51.062Z - normal: Language: en
2019-05-10T00:34:51.967Z - success: protocol editor-framework registered
2019-05-10T00:34:51.968Z - success: protocol app registered
2019-05-10T00:34:51.968Z - success: protocol theme registered
2019-05-10T00:34:51.968Z - success: protocol packages registered
2019-05-10T00:34:51.969Z - success: protocol unpack registerred
2019-05-10T00:34:51.969Z - success: protocol disable-commonjs registerred
2019-05-10T00:34:54.081Z - normal: connected!
2019-05-10T00:34:54.094Z - normal: Check project /Users/hautecouture_macbookpro/Documents/Cocos_project/FB_Test_Project/testProject
2019-05-10T00:34:54.108Z - normal: Initializing Cocos2d
2019-05-10T00:34:54.362Z - normal: Initializing Asset Database
2019-05-10T00:34:54.400Z - success: protocol uuid registerred
2019-05-10T00:34:54.400Z - success: protocol db registerred
2019-05-10T00:34:54.400Z - success: protocol thumbnail registerred
2019-05-10T00:34:54.400Z - normal: Loading editor/builtin packages
2019-05-10T00:34:54.432Z - success: anysdk loaded
2019-05-10T00:34:54.581Z - success: assets loaded
2019-05-10T00:34:54.598Z - success: builder loaded
2019-05-10T00:34:54.601Z - success: cocos-analytics loaded
2019-05-10T00:34:54.620Z - success: console loaded
2019-05-10T00:34:54.654Z - success: fb-instant-games loaded
2019-05-10T00:34:54.674Z - success: hierarchy loaded
2019-05-10T00:34:54.693Z - success: inspector loaded
2019-05-10T00:34:54.694Z - success: keystore loaded
2019-05-10T00:34:54.713Z - success: node-library loaded
2019-05-10T00:34:54.715Z - success: package-asset loaded
2019-05-10T00:34:54.717Z - success: preferences loaded
2019-05-10T00:34:54.735Z - success: project-exporter loaded
2019-05-10T00:34:54.770Z - success: project-importer loaded
2019-05-10T00:34:54.788Z - success: project-settings loaded
2019-05-10T00:34:54.806Z - success: ui-kit loaded
2019-05-10T00:34:54.826Z - success: ui-grid loaded
2019-05-10T00:34:54.845Z - success: scene loaded
2019-05-10T00:34:54.846Z - success: sprite-editor loaded
2019-05-10T00:34:54.867Z - success: store loaded
2019-05-10T00:34:54.889Z - success: timeline loaded
2019-05-10T00:34:54.889Z - normal: Loading builtin packages
2019-05-10T00:34:54.908Z - success: asset-db-debugger loaded
2019-05-10T00:34:54.909Z - success: color-picker loaded
2019-05-10T00:34:54.927Z - success: package-manager loaded
2019-05-10T00:34:54.928Z - success: qqplay-adapter loaded
2019-05-10T00:34:54.951Z - success: sdkbox loaded
2019-05-10T00:34:54.972Z - success: tester loaded
2019-05-10T00:34:54.989Z - success: ui-kit-preview-extra loaded
2019-05-10T00:34:55.008Z - success: ui-kit-preview loaded
2019-05-10T00:34:55.026Z - success: ui-tree loaded
2019-05-10T00:34:55.027Z - success: weapp-adapter loaded
2019-05-10T00:34:56.136Z - normal: Initializing project /Users/hautecouture_macbookpro/Documents/Cocos_project/FB_Test_Project/testProject
2019-05-10T00:34:56.139Z - normal: Loading packages
2019-05-10T00:34:56.146Z - normal: Watching packages
2019-05-10T00:34:56.250Z - normal: Run Application
2019-05-10T00:34:56.704Z - failed: [db-task][init] Failed to import asset /Users/hautecouture_macbookpro/Documents/Cocos_project/FB_Test_Project/testProject/assets/Scripts/FbInstantGames.js, message: Compile error: SyntaxError: /Users/hautecouture_macbookpro/Documents/Cocos_project/FB_Test_Project/testProject/assets/Scripts/FbInstantGames.js: Unexpected token (166:12)
  164 |         if (w != null && h != null)
  165 | 
> 166 |             let width = 720, height = 375;
      |             ^
  167 |         let renderTexture = new cc.RenderTexture(width, height);
  168 |         renderTexture.begin();
  169 |         target._sgNode.visit();
    at Parser.pp$5.raise (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:4454:13)
    at Parser.pp.unexpected (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1761:8)
    at Parser.pp$1.parseStatement (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1858:30)
    at Parser.pp$1.parseIfStatement (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:2059:26)
    at Parser.pp$1.parseStatement (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1846:19)
    at Parser.pp$1.parseBlockBody (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:2268:21)
    at Parser.pp$1.parseBlock (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:2247:8)
    at Parser.pp$3.parseFunctionBody (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:4235:22)
    at Parser.pp$3.parseMethod (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:4180:8)
    at Parser.pp$3.parseObjectMethod (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:4097:10)
2019-05-10T00:34:57.057Z - success: preview server running at http://localhost:7456
2019-05-10T00:35:01.173Z - normal: 1.9.3
2019-05-10T02:17:55.983Z - error: scene not saved. Please build project after saveing project.
    at Editor.Ipc.sendToPanel (/Applications/CocosCreator.app/Contents/Resources/app.asar/editor/builtin/builder/panel/builder.js:1:14928)
    at EventEmitter.ipcRenderer.on.n (/Applications/CocosCreator.app/Contents/Resources/app.asar/editor-framework/lib/renderer/ipc.js:1:4587)
    at emitMany (events.js:127:13)
    at EventEmitter.emit (events.js:204:7)
2019-05-10T02:18:01.441Z - normal: Start building with options : {
  "androidStudio": true,
  "apiLevel": "",
  "appABIs": [],
  "appKey": "",
  "appSecret": "",
  "buildPath": "/Users/hautecouture_macbookpro/Documents/Cocos_project/FB_Test_Project/testProject/build",
  "debug": false,
  "dest": "/Users/hautecouture_macbookpro/Documents/Cocos_project/FB_Test_Project/testProject/build/fb-instant-games",
  "encryptJs": true,
  "excludeScenes": [],
  "excludedModules": [],
  "fb-instant-games": {},
  "includeAnySDK": false,
  "includeEruda": false,
  "includeSDKBox": false,
  "inlineSpriteFrames": true,
  "inlineSpriteFrames_native": true,
  "jailbreakPlatform": false,
  "md5Cache": false,
  "mergeStartScene": false,
  "oauthLoginServer": "",
  "optimizeHotUpdate": false,
  "orientation": {
    "landscapeLeft": true,
    "landscapeRight": true,
    "portrait": false,
    "upsideDown": false
  },
  "packageName": "org.cocos2d.testProject",
  "platform": "fb-instant-games",
  "previewHeight": "720",
  "previewWidth": "1280",
  "privateKey": "",
  "qqplay": {
    "REMOTE_SERVER_ROOT": "",
    "orientation": "portrait"
  },
  "renderMode": "0",
  "scenes": [
    "b535a28a-432a-47ed-8e8b-dcb1a9e8b3cc"
  ],
  "sourceMaps": false,
  "startScene": "b535a28a-432a-47ed-8e8b-dcb1a9e8b3cc",
  "template": "link",
  "title": "testProject",
  "useDebugKeystore": true,
  "vsVersion": "auto",
  "webOrientation": "auto",
  "wechatgame": {
    "REMOTE_SERVER_ROOT": "",
    "appid": "wx6ac3f5090a6b99c5",
    "isSubdomain": false,
    "orientation": "portrait",
    "subContext": ""
  },
  "xxteaKey": "7c75aecb-8ae4-46",
  "zipCompressJs": true,
  "project": "/Users/hautecouture_macbookpro/Documents/Cocos_project/FB_Test_Project/testProject",
  "projectName": "testProject",
  "debugBuildWorker": false
}
2019-05-10T02:18:01.444Z - normal: Building /Users/hautecouture_macbookpro/Documents/Cocos_project/FB_Test_Project/testProject
2019-05-10T02:18:01.444Z - normal: Destination /Users/hautecouture_macbookpro/Documents/Cocos_project/FB_Test_Project/testProject/build/fb-instant-games
2019-05-10T02:18:01.805Z - normal: Delete /Users/hautecouture_macbookpro/Documents/Cocos_project/FB_Test_Project/testProject/build/fb-instant-games/**/*
2019-05-10T02:18:03.929Z - normal: Compiled project javascript file successfully
2019-05-10T02:18:03.930Z - normal: Start building assets
2019-05-10T02:18:03.930Z - normal: Start spawn build-worker
2019-05-10T02:18:04.614Z - normal: Finish spawn build-worker
2019-05-10T02:18:04.614Z - normal: Start init build-worker
2019-05-10T02:18:06.487Z - normal: 1.9.3
2019-05-10T02:18:06.610Z - normal: Finish init build-worker
2019-05-10T02:18:06.610Z - normal: Start build-assets in worker
2019-05-10T02:18:06.808Z - normal: Finish build-assets in worker
2019-05-10T02:18:06.810Z - normal: Finish building assets
2019-05-10T02:18:06.817Z - normal: Start building raw assets
2019-05-10T02:18:06.818Z - normal: Start building plugin scripts
2019-05-10T02:18:06.839Z - normal: Finish building raw assets
2019-05-10T02:18:06.847Z - normal: Generating main.js from /Applications/CocosCreator.app/Contents/Resources/static/build-templates/shares/main.js
2019-05-10T02:18:06.854Z - normal: Generating html from /Applications/CocosCreator.app/Contents/Resources/static/build-templates/fb-instant-games/index.html
2019-05-10T02:18:06.855Z - normal: Generating main.js from /Applications/CocosCreator.app/Contents/Resources/static/build-templates/fb-instant-games/main.js
2019-05-10T02:18:06.914Z - normal: Built to "/Users/hautecouture_macbookpro/Documents/Cocos_project/FB_Test_Project/testProject/build/fb-instant-games" successfully
2019-05-10T08:21:55.571Z - info: shutdown preview server
